@@ -8,7 +8,7 @@ RUN unset MAVEN_CONFIG && ./mvnw clean package -DskipTests
 
 FROM azul/zulu-openjdk:17.0.13-jre
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    wget unzip libgtk-3-0 libglu1-mesa xvfb xorg libgl1-mesa-glx \
+    wget unzip libgtk-3-0 libglu1-mesa tightvncserver xfonts-base \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 WORKDIR /opt/app
@@ -18,5 +18,20 @@ RUN chmod +r /opt/app/app.jar
 RUN wget https://download2.gluonhq.com/openjfx/17.0.13/openjfx-17.0.13_linux-x64_bin-sdk.zip && \
     unzip openjfx-17.0.13_linux-x64_bin-sdk.zip -d /opt/javafx-sdk && \
     rm openjfx-17.0.13_linux-x64_bin-sdk.zip
-ENV DISPLAY=:99
-CMD ["sh", "-c", "pkill -f Xvfb; rm -f /tmp/.X99-lock; Xvfb :99 -screen 0 1024x768x24 & sleep 2; java -Djava.awt.headless=true --module-path /opt/javafx-sdk/javafx-sdk-17.0.13/lib --add-modules javafx.controls,javafx.fxml -jar app.jar"]
+
+# Create a VNC configuration file
+COPY vnc.conf /home/user/.vnc/
+
+# Set environment variables
+ENV USER=user
+ENV DISPLAY=:1
+ENV XAUTHORITY=/home/user/.Xauthority
+
+# Copy the startup script
+COPY start.sh /opt/app/start.sh
+
+# Make the startup script executable
+RUN chmod +x /opt/app/start.sh
+
+# Start VNC server and run the application using the startup script
+CMD ["/bin/bash", "/opt/app/start.sh"]
